# Thronglets

./: Cargo.toml  README.md
.github/workflows/: pages.yml
scripts/: build-wasm.sh  sweep.sh
src/: config.rs  creature.rs  lib.rs  main.rs  mind.rs  render.rs  sim.rs  sound.rs  theme.rs  wasm.rs  world.rs
web/: app.js  index.html  styles.css
web/pkg/: thronglets.d.ts  thronglets.js  thronglets_bg.wasm  thronglets_bg.wasm.d.ts
