[package]
name = "thronglets"
version = "0.1.0"
edition = "2021"
description = "A life-simulating terminal game in Rust inspired by Black Mirror S07E04, \"Plaything\"."
license = "Apache-2.0"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
